--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pyrofork
+gTTS
 aiofiles
 aiohttp
 asyncio
@@ -10,19 +11,28 @@ hachoir
 heroku3
 httpx
 motor
-pillow
+numpy
+opencv-python
+pytz
+pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrofork
+kurigram==2.1.35
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
 tgcrypto
+telegraph 
 unidecode
-yt-dlp
 youtube-search
 youtube-search-python
 py-yt-search
+yt-dlp
+# ===========================================
+# ©️ 2025 Nand Yaduwanshi , aka @NoxxOP
+# 🔗 GitHub : https://github.com/NoxxOP/ShrutiMusic
+# 📢 Telegram Channel : https://t.me/ShrutiBots
+# ===========================================
